--- a/assets/sass/pages/_blog.scss
+++ b/assets/sass/pages/_blog.scss
@@ -1,3 +1,55 @@
-.blog-section-four{
+.blog-section-four {
   padding-top: 150px;
+  padding-bottom: 181px;
+
+  .row {
+    --bs-gutter-y: 68px;
+  }
+}
+.blog-item-four {
+  .image {
+    img {
+      transition: var(--bs-transition);
+    }
+  }
+
+  .text {
+    margin-top: 28px;
+
+    ul {
+      li {
+        color: var(--bs-paragraph);
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 140%;
+      }
+    }
+
+    .title {
+      color: var(--bs-text-color1);
+      font-size: 26px;
+      font-weight: 600;
+      line-height: 140%;
+      margin: 18px 0 18px 0;
+      border-bottom: 1px solid var(--bs-border-color5);
+      padding-bottom: 18px;
+    }
+
+    .view-all-btn2 {
+      color: var(--bs-paragraph);
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 140%;
+      svg{
+        margin-left: 9px;
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  &:hover {
+    img {
+      transform: scale(1.1);
+    }
+  }
 }
