--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -11,6 +11,7 @@
 @import "./pages/contact";
 @import "./pages/error404";
 @import "./pages/blog";
+@import "./pages/blog-details";
 @import "./components/page-header";
 @import "./components/subscribe-now";
 @import "./components/lines";
