--- a/assets/sass/common/_common.scss
+++ b/assets/sass/common/_common.scss
@@ -48,6 +48,10 @@
   --bs-text-color10: #555555;
   --bs-text-color11: #282828;
   --bs-text-color12: #E1E1E1;
+  --bs-text-color13: #C8C8C8;
+  --bs-text-color14: #DDDDDD;
+  --bs-text-color15: #454545;
+  --bs-text-color16: #6B6B6B;
   --bs-bg-color1: #F8F8F8;
   --bs-bg-color2: #10171D;
   --bs-bg-color3: #18212A;
@@ -67,6 +71,7 @@
   --bs-border-color10: #DCDCDC;
   --bs-border-color11: #2D3339;
   --bs-border-color12: #E9E7E7;
+  --bs-border-color13: #E9E8E8;
   --bs-rgba-color1: rgba(21, 21, 21, 0.91);
   --bs-white: #ffffff;
   --bs-white2: #FBFBFB;
