--- a/assets/sass/components/_brands.scss
+++ b/assets/sass/components/_brands.scss
@@ -1,7 +1,7 @@
 /*=============================
 	05. Brand slider area start
 ===============================*/
-.bland-slider-section {
+.brand-slider-section {
 	background-color: #FBFBFB;
 	padding: 53px 0;
 	margin-top: 30px;
